# mineru-dots

./: .dockerignore  MinerU_CLA.md  README.md  ROADMAP.md  SECURITY.md  count_pages.py  mkdocs.yml  pyproject.toml  update_version.py  vparse_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: cla.yml  cli.yml  python-package.yml
demo/: demo.py
docker/: compose.yaml
docker/china/: Dockerfile
docker/global/: Dockerfile  Dockerfile.cpu  start-gradio-cpu.sh  start-with-models.py  start-with-models.sh
docs/Module-PRD/: module-1-core-library-api.md
docs/Module-Plans/: module-1-core-library-api.md
docs/en/: index.md
docs/en/demo/: index.md
docs/en/faq/: index.md
docs/en/quick_start/: docker_deployment.md  extension_modules.md  index.md
docs/en/reference/: changelog.md  index.md  output_files.md
docs/en/usage/: advanced_cli_parameters.md  cli_tools.md  dots_ocr.md  model_source.md  quick_usage.md
mineru/: __init__.py
mineru/backend/hybrid/: hybrid_analyze.py
mineru/backend/lite/: __init__.py  lite_analyze.py
mineru/backend/pipeline/: batch_analyze.py  model_init.py  model_json_to_middle_json.py  para_split.py  pipeline_analyze.py
mineru/backend/pipeline_lite/: __init__.py  pipeline_lite_analyze.py
mineru/backend/vlm/: dots_ocr_client.py  vlm_analyze.py
mineru/backend/vlm/dots_ocr/: __init__.py
mineru/backend/vlm/dots_ocr/utils/: consts.py  image_utils.py  prompts.py
mineru/cli/: __init__.py  __main__.py  client.py  common.py  fast_api.py  gradio_app.py  models_download.py  streaming.py  vlm_server.py
mineru/data/data_reader_writer/: __init__.py  filebase.py
mineru/model/ocr/: tesseract.py
mineru/model/vlm/: lmdeploy_server.py  vllm_server.py
mineru/resources/: header.html
mineru/utils/: config_reader.py  engine_utils.py  vparse_config.py
projects/: README.md
projects/mcp/: .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/mcp/src/mineru/: api.py  cli.py  config.py  language.py  server.py
projects/mcp/src/vparse/: api.py  cli.py  config.py  examples.py  language.py  server.py
projects/mineru_tianshu/: README.md  api_server.py  client_example.py  litserve_worker.py  requirements.txt  start_all.py  task_db.py  task_scheduler.py
projects/multi_gpu_v2/: README.md  _config_endpoint.py  client.py  server.py
projects/vparse_heavy/: README.md  api_server.py  client_example.py  litserve_worker.py  requirements.txt  start_all.py  task_db.py  task_scheduler.py
tests/: get_coverage.py
tests/unittest/: test_client.py  test_common.py  test_config.py  test_e2e.py  test_exceptions.py  test_pipeline_lite.py  test_result.py
vparse/: __init__.py  client.py  config.py  exceptions.py  result.py
vparse/backend/: utils.py
vparse/backend/engine/: processor.py
vparse/backend/hybrid/: hybrid_analyze.py  hybrid_magic_model.py  hybrid_model_output_to_middle_json.py
vparse/backend/lite/: __init__.py  lite_analyze.py
vparse/backend/pipeline/: batch_analyze.py  model_init.py  model_json_to_middle_json.py  model_list.py  para_split.py  pipeline_analyze.py  pipeline_magic_model.py  pipeline_middle_json_mkcontent.py
vparse/backend/vlm/: dots_ocr_client.py  model_output_to_middle_json.py  utils.py  vlm_analyze.py  vlm_magic_model.py  vlm_middle_json_mkcontent.py
vparse/backend/vlm/dots_ocr/: __init__.py
vparse/backend/vlm/dots_ocr/model/: inference.py
vparse/backend/vlm/dots_ocr/utils/: layout_utils.py
vparse/cli/: __init__.py  __main__.py  client.py  common.py  fast_api.py  gradio_app.py  models_download.py  streaming.py  vlm_server.py
vparse/data/utils/: exceptions.py
vparse/model/layout/: doclayoutyolo.py
vparse/model/mfd/: yolo_v8.py
vparse/model/mfr/: utils.py
vparse/model/mfr/pp_formulanet_plus_m/: predict_formula.py  processors.py
vparse/model/mfr/unimernet/: Unimernet.py
vparse/model/ocr/: __init__.py  pytorch_paddle.py  tesseract.py
vparse/model/ori_cls/: paddle_ori_cls.py
vparse/model/reading_order/: xycut.py
vparse/model/table/cls/: paddle_table_cls.py
vparse/model/table/rec/: RapidTable.py
vparse/model/table/rec/slanet_plus/: main.py  matcher.py  table_structure.py  table_structure_utils.py
vparse/model/table/rec/unet_table/: main.py  table_recover.py  table_structure_unet.py  utils.py  utils_table_line_rec.py  utils_table_recover.py
vparse/model/utils/pytorchocr/modeling/heads/: rec_ppformulanet_head.py  rec_unimernet_head.py
vparse/model/utils/pytorchocr/modeling/necks/: rnn.py
vparse/model/utils/pytorchocr/postprocess/: rec_postprocess.py
vparse/model/utils/tools/infer/: predict_det.py  predict_rec.py
vparse/model/vlm/: lmdeploy_server.py  vllm_server.py
vparse/resources/: header.html
vparse/utils/: block_pre_proc.py  block_sort.py  boxbase.py  cli_parser.py  compat.py  config_reader.py  cut_image.py  draw_bbox.py  engine_utils.py  enum_class.py  hash_utils.py  language.py  llm_aided.py  magic_model_utils.py  model_utils.py  models_download_utils.py  ocr_utils.py  os_env_config.py  pdf_classify.py  pdf_image_tools.py  pdf_reader.py  span_block_fix.py  span_pre_proc.py  table_merge.py
vparse/utils/engine/: output.py
